--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="17"
         android:targetSdkVersion="24" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -48,7 +48,7 @@
             android:parentActivityName="com.runcom.jiazhangbang.mainActivity.MainActivity" >
         </activity>
         <activity
-            android:name="com.runcom.jiazhangbang.listenText.Play"
+            android:name="com.runcom.jiazhangbang.listenText.ListenText"
             android:icon="@drawable/ic_come_back"
             android:parentActivityName="com.runcom.jiazhangbang.Chinese.Chinese" >
         </activity>
