--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,6 +67,11 @@
             android:icon="@drawable/ic_come_back"
             android:parentActivityName="com.runcom.jiazhangbang.Chinese.Chinese" >
         </activity>
+        <activity
+            android:name="com.runcom.jiazhangbang.reciteText.ReciteTextMain"
+            android:icon="@drawable/ic_come_back"
+            android:parentActivityName="com.runcom.jiazhangbang.reciteText.ReciteText" >
+        </activity>
     </application>
 
 </manifest>
