--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.runcom.jiazhangbang"
     android:versionCode="1"
-    android:versionName="1.1" >
+    android:versionName="1.2" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.runcom.jiazhangbang.welcome.Welcome"
+            android:name="com.runcom.jiazhangbang.mainActivity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
             android:name="UMENG_CHANNEL"
             android:value="wgcwgc" />
 
-        <activity android:name="com.runcom.jiazhangbang.mainActivity.MainActivity" >
+        <activity android:name="com.runcom.jiazhangbang.welcome.Welcome" >
         </activity>
         <activity
             android:name="com.runcom.jiazhangbang.Chinese.Chinese"
