--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.runcom.jiazhangbang"
     android:versionCode="1"
-    android:versionName="1.2" >
+    android:versionName="1.3" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -72,6 +72,11 @@
             android:name="com.runcom.jiazhangbang.reciteText.ReciteTextMain"
             android:icon="@drawable/ic_come_back"
             android:parentActivityName="com.runcom.jiazhangbang.reciteText.ReciteText" >
+        </activity>
+        <activity
+            android:name="com.runcom.jiazhangbang.findNewWords.FindNewWords"
+            android:icon="@drawable/ic_come_back"
+            android:parentActivityName="com.runcom.jiazhangbang.Chinese.Chinese" >
         </activity>
     </application>
 
